# loleseri

./: README.md  RELEASE_NOTE.md
src/examples/complex/: CMakeLists.txt  main.cpp
src/examples/simple/: CMakeLists.txt  main.cpp
src/examples/struct/: CMakeLists.txt  main.cpp
src/lib/: loleseri.doxygen
src/lib/loleseri/: endian.hpp  loleseri.hpp
src/test/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  arithmetic.cpp  array.cpp  struct.cpp
